--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ Template: hestia-pro
 Version: 0.1
 */
 
-h2.hestia-title, h5.description, h4.info-title {
+body, h1, h2, h3, h4, h5, h6, h2.hestia-title, h5.description, h4.info-title, .blog-post, h3.hestia-title, .widget h5, .card-title, .page-header.header-small .hestia-title, .page-header.header-small .title {
     font-family: Montserrat, "Helvetica Neue", sans-serif;
 }
 
@@ -172,4 +172,45 @@ h6.category {
 
 #contact .fa-map-marker:before {
     color: red;
+}
+
+/* Styling Blog page */
+
+.blog-posts-wrap .card-plain {
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 5px;
+}
+
+.card-blog.sticky {
+    box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0 rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+    background-color: transparent;
+}
+
+.card-blog.sticky .card-title {
+    font-size: 25px;
+}
+
+.card-blog.sticky h6, .card-blog.sticky .author {
+    text-align: right;
+}
+
+.card-blog.sticky .card-description {
+    color: black;
+}
+
+.card-blog.sticky .card-image {
+    box-shadow: 0 45px 55px 0 rgba(0, 0, 0, 0.6);
+}
+
+.card-bottom-author {
+    text-transform: capitalize;
+    float: left;
+    color: #d48989;
+    border-bottom: 1px dotted #eee3e3;
+}
+
+.card-bottom-date {
+    float: right;
+    color: #d48989;
+    border-bottom: 1px dotted #eee3e3;
 }
