Styled the author and

--- a/style.css
+++ b/style.css
@@ -103,6 +103,10 @@ h6.category {
 }
 
 /* Styling Our Team section */
+#team .card {
+    margin: 0 auto;
+}
+
 #team h5.description {
     font-size: 22px;
     line-height: 30px;
@@ -113,8 +117,16 @@ h6.category {
 }
 
 #team .card-image, #team .card-plain .card-image, #team .card-plain .card-image img {
-    border-radius: 4px;
-    box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3)
+    border-radius: 50%;
+    box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);
+}
+
+#team .card-plain .card-image {
+    margin: 20px;
+}
+
+.hestia-team .card .content {
+    text-align: center;
 }
 
 #team .card-title {
@@ -123,9 +135,9 @@ h6.category {
 }
 
 #team h6.category {
-    color: #9a9a9a;
+    color: #f96332;
     font-weight: 700;
-    font-size: 12px;
+    font-size: 14px;
     margin-top: -6px;
 }
 
@@ -133,7 +145,7 @@ h6.category {
     margin-top: -10px;
 }
 
-/* Styling What Clients say section */
+/* Styling What Clients Say section */
 #testimonials h2.hestia-title {
     margin-bottom: 30px;
 }
