--- a/style.css
+++ b/style.css
@@ -58,6 +58,13 @@ body, h1, h2, h3, h4, h5, h6, h2.hestia-title, h5.description, h4.info-title, .b
     line-height: 100px;
     font-size: 45px;
 }
+
+/* Transform Features icons making the larger on moving them up on hover */
+a:not(.btn):hover .icon {
+    opacity: 0.9;
+    transform: matrix(1.2, 0, 0, 1.2, 0, -30)
+}
+
 /* Remove box-shadow from Conact section icons */
 .hestia-description .icon > i, .info .icon > i {
     box-shadow: none;
