--- a/style.css
+++ b/style.css
@@ -366,3 +366,8 @@ div.wpforms-container .wpforms-form .form-group.is-focused .form-control,
 #ribbon .btn.btn-primary {
     transition: all 0.5s ease-out;
 }
+
+/* Testimonials background gradient */
+.hestia-testimonials {
+background: linear-gradient(to bottom, #f2af5b 0%,#9e9e9e 36%,#9e9e9e 66%,#f2af5b 100%);
+}
