--- a/style.css
+++ b/style.css
@@ -372,7 +372,7 @@ div.wpforms-container .wpforms-form .form-group.is-focused .form-control,
 background: linear-gradient(to bottom, #f2af5b 0%,#9e9e9e 36%,#9e9e9e 66%,#f2af5b 100%);
 }
 
-/**/
+/*Reduce subscribe section overlay */
 
 .subscribe-line.subscribe-line-image:after {
     background-color: rgba(0, 0, 0, 0.3);
