--- a/style.css
+++ b/style.css
@@ -369,7 +369,7 @@ div.wpforms-container .wpforms-form .form-group.is-focused .form-control,
 
 /* Testimonials background gradient */
 .hestia-testimonials {
-background: linear-gradient(to bottom, #f2af5b 0%,#9e9e9e 36%,#9e9e9e 66%,#f2af5b 100%);
+    background: linear-gradient(to bottom, #f2af5b 0%,#9e9e9e 36%,#9e9e9e 66%,#f2af5b 100%);
 }
 
 /*Reduce subscribe section overlay */
@@ -397,4 +397,11 @@ p.demo_store, .admin-bar p.demo_store {
 
 .tooltip.top .tooltip-arrow {
     border-top-color: red;
+}
+
+/* Pagination hover color */
+
+.woocommerce nav.woocommerce-pagination ul li a:hover {
+    background: linear-gradient(to bottom, #f4874a 0%,#fff 100%);
+    color: mediumvioletred;
 }
