--- a/style.css
+++ b/style.css
@@ -509,3 +509,24 @@ button:hover {
 section ul {
     display: grid;
 }
+
+/* WooCommerce tabs */
+
+.woocommerce div.product .woocommerce-tabs ul.tabs li.active {
+    background: #f4874a !important;
+    border-bottom-color: #f4874a !important;
+    border-radius: 10px 10px 0 0;
+}
+
+.woocommerce div.product .woocommerce-tabs ul.tabs li {
+    border: 2px solid #f4874a !important;
+    border-radius: 10px 10px 0 0;
+}
+
+.woocommerce div.product .woocommerce-tabs ul.tabs::before {
+    border-bottom: 2px solid #f4874a !important;
+}
+
+.woocommerce div.product .woocommerce-tabs ul.tabs.wc-tabs li.active a {
+    color: #fff !important;
+}
